Agregamos roles y config para balancear

--- a/lamp.yml
+++ b/lamp.yml
@@ -1,85 +1,24 @@
 ---
-- hosts: centos
+- hosts: webserver
   remote_user: ansible
   become: yes
   become_method: sudo
-  vars:
-    packages:
-      - httpd
-      - php
-      - mariadb-server
-      - mariadb
-    sitio: ejemplo
-    server: www.ejemplo.com.uy
-    hostmaster: admin@ejemplo.com.uy
+ 
+  vars_files:
+  - ./loadbalancer_vars.yml
 
   roles: 
   - role: apache-centos
     when: ansible_facts['os_family'] == "RedHat"
   - role: apache-debian
     when: ansible_facts['os_family'] == "Debian"
-
-
-  tasks: 
-  - name: Install LAMP software
-    yum:
-      name: "{{ packages }}"
-      state: latest
-  
-  - name: Create virtualhost config directory
-    file: 
-      path: /etc/httpd/vhost.d
-      state: directory
-      mode: '0755'
-      owner: root
-
-  - name: Add virtualhost config directory to httpd.conf
-    lineinfile: 
-      path: /etc/httpd/conf/httpd.conf
-      line: IncludeOptional vhost.d/*.conf
-
-  - name: Create virtualhost content directories 
-    file: 
-      path: "{{ item }}"
-      recurse: yes
-      state: directory
-      owner: apache
-      group: apache
-      mode: '0755'
-    loop:
-     - /var/www/{{ sitio }}
-     - /var/www/{{ sitio }} /html
-     - /var/www/{{ sitio }}/cgi-bin
-       
-  - name: Create virtualhost configuration
+   
+  tasks:     
+  - name: Create loadbalancer configuration
     template:
-      src: templates/{{ sitio }}.j2
-      dest: /etc/httpd/vhost.d/{{ sitio }}.conf
+      src: templates/loadbalancer.j2
+      dest: /etc/httpd/vhost.d/loadbalancer.conf
       owner: root
       mode: '0644'
-    notify: Restart httpd
-
-  - name: Add index.html file
-    template:
-      src: ./templates/index.j2
-      dest: /var/www/index.html
-      mode: '0644'
-      owner: apache
-      group: apache      
-
-  - name: Start and enable services
-    service:
-      name: "{{ item }}"
-      state: started
-      enabled: yes
-    loop:
-      - mariadb 
-  
-  - name: Configure firewall
-    firewalld:
-      service: "{{ item }}"
-      state: enabled
-      permanent: yes
-      immediate: yes
-    loop:
-     - mysql
+    when: ansible_facts['os_family']  == "RedHat"
+    notify: Restart httpd   
